# BYOK_V1

./: .gitignore  CLAUDE.md  Makefile  draft.py  pyproject.toml  simulation_byok.py
.claude/docs/: architectural_patterns.md
.claude/skills/designer/: SKILL.md
.streamlit/: config.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/: routes_auth.py  routes_completion.py  routes_generate.py  routes_keys.py  routes_prompts.py  routes_route_to_model.py  routes_usage.py
app/db/: model_catalog_models.py  models.py  prompt_models.py  session.py
app/providers/: base.py  gemini_adapter.py  openai_adapter.py
app/schemas/: auth.py  completion.py  generate.py  keys.py  prompts.py  routing.py
app/services/: LLM_completion.py  auth_service.py  completion_service.py  cost.py  deterministic_router.py  gemini_profiler.py  key_service.py  key_validator.py  model_catalog.py  model_catalog_repo.py  model_selector.py  router.py  validator.py
app/utils/: encryption.py  token_estimator.py
docs/: BYOK_SYSTEM_CONTEXT.md  BYOK_context.md  ERROR_HANDLING.md  MILESTONE_2.md  MILESTONE_3.md  Milestone_summary_template  checklist.md
scripts/: seed_catalog.py  seed_model_catalog.py
tests/unit/: test_auth.py  test_completion.py  test_cost.py  test_deterministic_router.py  test_gemini_profiler.py  test_keys.py  test_pydantic_profile.py  test_router.py  test_validator.py
ui/: chat.py
