[project]
name = "byok-router"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.8.2",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.32",
  "google-genai>=1.0.0",
  "openai>=1.0.0",
  "anthropic>=0.40.0",
  "python-dotenv>=1.0.0",
  "streamlit>=1.38.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1 --cov=app --cov-report=term-missing"
